src/babel/__integration-tests__/preval-extract/__snapshots__/errors.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preval-extract babel plugin errors should throw error if the id was not found 1`] = `
Command failed: node <<REPLACED>>/src/babel/__integration-tests__/__utils__/transpile.js '"const title = css\`\\n  width: \${document.width};\\n\`;"' '{"pluginOptions":{"cache":false,"extract":false},"babelOptions":{"filename":"test.js"}}'
<<REPLACED>>/node_modules/babel-core/lib/transformation/file/index.js:590
      throw err;
      ^

SyntaxError: test.js: Linaria css evaluation error:
  Could not find a reference to 'document'.
  This might happen if you used some undeclared variable/function or a browser specific API.

  2 | 
  3 |     const title = css\`
> 4 | width: \${document.width};
    |          ^
  5 | \`;
    at File.buildCodeFrameError (<<REPLACED>>/node_modules/babel-core/lib/transformation/file/index.js:427:15)
    at NodePath.buildCodeFrameError (<<REPLACED>>/node_modules/babel-traverse/lib/path/index.js:140:26)
    at resolveSource (<<REPLACED>>/build/babel/preval-extract/resolveSource.js:33:16)
    at Object.Identifier (<<REPLACED>>/build/babel/preval-extract/index.js:46:48)
    at NodePath._call (<<REPLACED>>/node_modules/babel-traverse/lib/path/context.js:76:18)
    at NodePath.call (<<REPLACED>>/node_modules/babel-traverse/lib/path/context.js:48:17)
    at NodePath.visit (<<REPLACED>>/node_modules/babel-traverse/lib/path/context.js:105:12)
    at TraversalContext.visitQueue (<<REPLACED>>/node_modules/babel-traverse/lib/context.js:150:16)
    at TraversalContext.visitSingle (<<REPLACED>>/node_modules/babel-traverse/lib/context.js:108:19)
    at TraversalContext.visit (<<REPLACED>>/node_modules/babel-traverse/lib/context.js:192:19)

`;
